Added the swagger docs
